# docs-template

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: conf.py
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js  setup.html  sitemap.xml  usage.html
docs/_build/html/.doctrees/: environment.pickle  index.doctree  setup.doctree  usage.doctree
docs/_build/html/.doctrees/development/: index.doctree  setup.doctree
docs/_build/html/.doctrees/reference/: index.doctree
docs/_build/html/.doctrees/resources/: index.doctree
docs/_build/html/.doctrees/setup/: index.doctree  setup.doctree
docs/_build/html/.doctrees/usage/: advanced_features.doctree  features.doctree  index.doctree  markdown.doctree  usage.doctree
docs/_build/html/_sources/: index.md.txt  index.rst.txt
docs/_build/html/_sources/reference/: index.md.txt
docs/_build/html/_sources/setup/: index.md.txt
docs/_build/html/_sources/usage/: index.md.txt  markdown.md.txt
docs/_build/html/_static/css/: custom.css
docs/_build/html/development/: index.html  setup.html
docs/_build/html/reference/: index.html
docs/_build/html/resources/: index.html
docs/_build/html/setup/: index.html  setup.html
docs/_build/html/usage/: advanced_features.html  features.html  index.html  markdown.html  usage.html
docs/development/: index.md
docs/setup/: index.md
docs/usage/: features.md
