[tool.poetry]
name = "docs"
version = "0.1.0"
description = ""
authors = ["Wyatt  Walsh <wyattowalsh@gmail.com>"]
license = "\"GPL-3.0-or-later\""
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.docs.dependencies]
sphinx = "^6"
pydata-sphinx-theme = "^0.13.3"
sphinx-design = "^0.4.1"
myst-parser = "^1.0.0"
sphinxcontrib-mermaid = "^0.9.2"
sphinx-copybutton = "^0.5.2"
sphinx-markdown-builder = "^0.5.5"
sphinx-git = "^11.0.0"
sphinx-autobuild = "^2021.3.14"
sphinx-hoverxref = "^1.3.0"
sphinx-sitemap = "^2.5.0"
sphinx-togglebutton = "^0.3.2"
sphinx-favicon = "^1.0.1"
sphinxcontrib-jquery = "^4.1"
linkify-it-py = "^2.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
